# ChangeLog for app-admin/sulfur
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/sulfur/ChangeLog,v 1.11 2011/09/18 10:49:21 lxnay Exp $

*sulfur-1.0_rc53 (18 Sep 2011)

  18 Sep 2011; Fabio Erculiani <lxnay@gentoo.org> +sulfur-1.0_rc53.ebuild:
  version bump

*sulfur-1.0_rc43 (23 Aug 2011)

  23 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +sulfur-1.0_rc43.ebuild:
  version bump

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> -sulfur-1.0_rc37.ebuild:
  drop older version 1.0_rc37

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> -sulfur-1.0_rc34.ebuild:
  drop older version 1.0_rc34

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> -sulfur-1.0_rc29.ebuild:
  drop older version 1.0_rc29

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> -sulfur-1.0_rc27.ebuild:
  drop older version 1.0_rc27

*sulfur-1.0_rc38 (12 Aug 2011)

  12 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +sulfur-1.0_rc38.ebuild:
  version bump

*sulfur-1.0_rc37 (11 Aug 2011)

  11 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +sulfur-1.0_rc37.ebuild:
  version bump

*sulfur-1.0_rc34 (07 Aug 2011)

  07 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +sulfur-1.0_rc34.ebuild:
  version bump

*sulfur-1.0_rc29 (02 Aug 2011)

  02 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +sulfur-1.0_rc29.ebuild:
  version bump

*sulfur-1.0_rc27 (19 Jul 2011)

  19 Jul 2011; Fabio Erculiani <lxnay@gentoo.org> +sulfur-1.0_rc27.ebuild,
  +metadata.xml:
  new ebuild
