@@ -1,6 +1,11 @@
 # ChangeLog for app-admin/sulfur
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/sulfur/ChangeLog,v 1.11 2011/09/18 10:49:21 lxnay Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/sulfur/ChangeLog,v 1.12 2011/10/09 06:54:14 lxnay Exp $
+
+*sulfur-1.0_rc59 (09 Oct 2011)
+
+  09 Oct 2011; Fabio Erculiani <lxnay@gentoo.org> +sulfur-1.0_rc59.ebuild:
+  version bump
 
 *sulfur-1.0_rc53 (18 Sep 2011)
 
